--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/appt?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=perficient
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
