--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/appt?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/appt?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=perficient
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
