--- a/AppointmentManagementService/pom.xml
+++ b/AppointmentManagementService/pom.xml
@@ -51,6 +51,15 @@
             <artifactId>libphonenumber</artifactId>
             <version>8.12.43</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-artemis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
