--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -71,6 +71,12 @@
             <version>8.12.43</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
