--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/user?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=perficient
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
