--- a/AppointmentManagementService/src/main/resources/application.properties
+++ b/AppointmentManagementService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/appt?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=perficient
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
