--- a/AppointmentService/src/main/resources/application.properties
+++ b/AppointmentService/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=perficient
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
