--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+jjcperf.manager.host=http://localhost:8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/user?createDatabaseIfNotExist=true
 spring.datasource.username=root
