--- a/maven-bom/pom.xml
+++ b/maven-bom/pom.xml
@@ -39,6 +39,8 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <com.googlecode.libphonenumber.version>8.12.43</com.googlecode.libphonenumber.version>
         <spring-jms.version>5.3.15</spring-jms.version>
+        <spring-restdocs.version>2.0.6.RELEASE</spring-restdocs.version>
+
     </properties>
     <dependencyManagement>
         <dependencies>
