--- a/maven-bom/pom.xml
+++ b/maven-bom/pom.xml
@@ -87,6 +87,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
+            <version>5.3.15</version>
         </dependency>
 
         <dependency>
