Changed all the messaging to send debug statements to Slf4j instead of the console. Set logging level to debug in app.prop to see messages. (Consider changing to log.info...?)

--- a/AppointmentManagementService/src/main/resources/application-josh.properties
+++ b/AppointmentManagementService/src/main/resources/application-josh.properties
@@ -3,3 +3,6 @@ jjcperf.manager.host=http://localhost:8080
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+#logging.level.root = debug
+logging.level.com.jjcperf = debug
