--- a/AppointmentService/src/main/resources/application-josh.properties
+++ b/AppointmentService/src/main/resources/application-josh.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+#logging.level.root = debug
+logging.level.sql = debug
+logging.level.com.jjcperf = debug
