Added CRUD functionality for User and Appointment through the MgmtService.
Changed Appointment entity types for start/end time from Time to LocalDateTime.

Added jackson jsr310 module to handle appointment entity change. Set the object mapper in MessageConverter in JMSConfig to support this. Added dependency for this module in POM files. Tested all CRUD functionality with postman (reach out for API calls).

Deleting has a foreign key constraint issue if it's present in the join table; likely need to set a cascade value to fix. If a resource is not found, the MgmtService never gets an HTTP response, needs to be fixed (timeout?).

--- a/maven-bom/pom.xml
+++ b/maven-bom/pom.xml
@@ -40,6 +40,7 @@
         <com.googlecode.libphonenumber.version>8.12.43</com.googlecode.libphonenumber.version>
         <spring-jms.version>5.3.15</spring-jms.version>
     </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -87,12 +88,25 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
-            <version>5.3.15</version>
+            <version>${spring-jms.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-artemis</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-bom</artifactId>
+            <version>2.13.1</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
