--- a/AppointmentManagementService/src/main/resources/application-jeff.properties
+++ b/AppointmentManagementService/src/main/resources/application-jeff.properties
@@ -3,3 +3,6 @@ jjcperf.manager.host=http://localhost:8080
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+#logging.level.root = debug
+logging.level.com.jjcperf = debug
