--- a/AppointmentManagementService/pom.xml
+++ b/AppointmentManagementService/pom.xml
@@ -21,6 +21,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
             <version>2.0.1</version>
