--- a/AppointmentManagementService/src/main/resources/application-josh.properties
+++ b/AppointmentManagementService/src/main/resources/application-josh.properties
@@ -1,8 +1,15 @@
 server.port=8080
 jjcperf.manager.host=http://localhost:8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/appt_mgmt_sys?createDatabaseIfNotExist=true
+spring.datasource.username=josh
+spring.datasource.password=Lu*NSED!Swq22j2S
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 #logging.level.root = debug
+logging.level.sql = debug
 logging.level.com.jjcperf = debug
