Got successful signup and db entry!
will create a similar system for appointment adding next

--- a/AppointmentManagementService/src/main/resources/application-jeff.properties
+++ b/AppointmentManagementService/src/main/resources/application-jeff.properties
@@ -6,3 +6,6 @@ spring.artemis.password=simetraehcapa
 
 #logging.level.root = debug
 logging.level.com.jjcperf = debug
+
+#spring.jackson.default-property-inclusion=always
+
