--- a/UserService/src/main/resources/application-cole.properties
+++ b/UserService/src/main/resources/application-cole.properties
@@ -2,8 +2,8 @@ server.port=8081
 jjcperf.manager.host=http://localhost:8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/appt_mgmt_sys?createDatabaseIfNotExist=true
-spring.datasource.username=?
-spring.datasource.password=?
+spring.datasource.username=root
+spring.datasource.password=perficient
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
