Code cleanup. Updated to jakarta validation 3.0.1. Untested.

--- a/AppointmentManagementService/src/main/resources/application-josh.properties
+++ b/AppointmentManagementService/src/main/resources/application-josh.properties
@@ -1,3 +1,6 @@
+# suppress inspection "SpellCheckingInspection" for whole file
+# suppress inspection "SpellCheckingInspection" for whole file
+# suppress inspection "SpellCheckingInspection" for whole file
 server.port=8080
 jjcperf.manager.host=http://localhost:8080
 
