--- a/AppointmentManagementService/src/main/resources/application-jeff.properties
+++ b/AppointmentManagementService/src/main/resources/application-jeff.properties
@@ -1,11 +1,18 @@
 server.port=8080
 jjcperf.manager.host=http://localhost:8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/appt_mgmt_sys?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=perficient
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 #logging.level.root = debug
 logging.level.com.jjcperf = debug
+logging.level.sql = debug
 
 #spring.jackson.default-property-inclusion=always
 
